--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
-    <title>Hockey Store</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <title>Hockey Store</title>
 </head>
+
 <body>
-    
+  <header>
+    <div class="navbar bg-base-100">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </div>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a class="text-[15px] font-[600] text-orange-600">Home</a></li>
+            <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
+            <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
+            <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
+            <li><a class="text-[15px] font-[400] text-[#424247]">Contact</a></li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost font-[800] text-[36px]">Hocky<span class="text-red-600">'</span> S</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a class="text-[15px] font-[600] text-orange-600">Home</a></li>
+          <li> <a class="text-[15px] font-[400] text-[#424247]">About</a></li>
+          <li><a class="text-[15px] font-[400] text-[#424247]">Product</a></li>
+          <li><a class="text-[15px] font-[400] text-[#424247]">Pages</a></li>
+          <li><a class="text-[15px] font-[400] text-[#424247]">Contact</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <i class="fa-solid fa-magnifying-glass mr-[20px] opacity-50 hidden lg:flex"></i>
+        <a class="text-white btn class= bg-[#FF4240] hover:bg-sky-700">Get Ticket</a>
+    </div>
+      </div>
+    </div>
+  </header>
+  <main>
+
+  </main>
 </body>
+
 </html>
