--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!--Navbar-->
   <header>
     <div class="navbar bg-base-100">
       <div class="navbar-start">
@@ -48,8 +49,61 @@
     </div>
       </div>
     </div>
+<br>
+<br>
+<br>
+<br>
+
+
+<div class="container mx-5 my-5">
+  <div class="carousel w-full ml-7 mt-[55px] lg:h-[550px] rounded-3xl">
+
+    <div id="slide1" class="carousel-item relative w-full">
+      <img src="Images/1.png" class="w-full" />
+      
+      <div class="w-[500px] hidden lg:block p-5 space-y-5 lg:right-[10%] lg:bottom-[10%] absolute h-[150px]  bg-black rounded-xl text-white">
+      <h3 class="text-[20px]">Meet all the heroes from the field</h3>
+      <p class="text-[15px] font-[400] text-gray-500">Are you ready to take your hockey team to new heights?
+        Our elite coaching services are tailored to transform your team into champions!</p>
+  </div>
+
+  <div class="absolute flex justify-between transform translate-y-[30px] space-x-4 left-12 top-[60%] lg:left-12 lg:top-[77%]">
+  <a href="#slide4" class="btn btn-circle bg-black text-white border-0">❮</a>
+  <a href="#slide2" class="btn btn-circle bg-black text-white border-0">❯</a>
+</div>
+    </div> 
+
+
+    <div id="slide2" class="carousel-item relative w-full">
+      <img src="Images/hocky.png" class="w-full" />
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide1" class="btn btn-circle">❮</a> 
+        <a href="#slide3" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+    <div id="slide3" class="carousel-item relative w-full">
+      <img src="Images/woman.jpeg" class="w-full" />
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide2" class="btn btn-circle">❮</a> 
+        <a href="#slide4" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+    <div id="slide4" class="carousel-item relative w-full">
+      <img src="Images/h-2.jpg" class="w-full" />
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide3" class="btn btn-circle">❮</a> 
+        <a href="#slide1" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+  </div>
+</div>
   </header>
   <main>
+ <!--Carousal-->
+
+
+
+
 
   </main>
 </body>
