--- a/index.html
+++ b/index.html
@@ -167,73 +167,216 @@
     </div>
   </header>
 
-<!--Main Part-->
-<main class="w-[95%] lg:w-[1170px] mx-auto">
+  <!--Main Part-->
+  <main class="w-[95%] lg:w-[1170px] mx-auto">
 
-  <div class="border-dashed border-t  border-black w-full lg:mt-[100px] my-4"></div>
-  <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
+    <div class="border-dashed border-t  border-black w-full lg:mt-[100px] my-4"></div>
+    <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
       <h1 class="text-[28px] lg:text-[35px] font-[800] text-[#131318]">Program Sections</h1>
       <p class="text-[15px] text-black">
-        Learn the ins and outs of tactical play, positioning, and game strategy. 
+        Learn the ins and outs of tactical play, positioning, and game strategy.
         Gain a competitive edge with in-depth knowledge shared by our seasoned coaching team.</p>
-  </div>
+    </div>
 
-  <div class="border-t border-dashed border-black w-full my-15"></div>
-  <div class="flex flex-col lg:flex-row justify-between">
-    <div class="hero h-full w-[100%] lg:h-[335px] lg:w-[570px] rounded-2xl"
+    <div class="border-t border-dashed border-black w-full my-15"></div>
+    <div class="flex flex-col lg:flex-row justify-between">
+      <div class="hero h-full w-[100%] lg:h-[335px] lg:w-[570px] rounded-2xl"
         style="background-image: url(./Images/4.png)">
         <div class="hero-overlay bg-opacity-50 rounded-2xl"></div>
         <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-                <h1 class="mb-5 text-4xl font-bold lg:text-left">Junior Program</h1>
-                <p class="mb-5 lg:text-left">
-                  Join the exciting world of hockey with Junior Program. Our program is 
-                  specially crafted to introduce kids to the joys of the 
-                  sport while focusing on skill development, teamwork, and fostering a love for the game.
-                </p>
-                <button class="btn lg:-ml-[330px] bg-[#d9413f] text-white border-0">Register Now</button>
-            </div>
+          <div class="max-w-md">
+            <h1 class="mb-5 text-4xl font-bold lg:text-left">Junior Program</h1>
+            <p class="mb-5 lg:text-left">
+              Join the exciting world of hockey with Junior Program. Our program is
+              specially crafted to introduce kids to the joys of the
+              sport while focusing on skill development, teamwork, and fostering a love for the game.
+            </p>
+            <button class="btn lg:-ml-[330px] bg-[#d9413f] text-white border-0">Register Now</button>
+          </div>
         </div>
-    </div>
-    <div class="hero h-full w-[100%] mt-[20px] lg:mt-0 lg:h-[335px] lg:w-[570px] rounded-2xl"
+      </div>
+      <div class="hero h-full w-[100%] mt-[20px] lg:mt-0 lg:h-[335px] lg:w-[570px] rounded-2xl"
         style="background-image: url(./Images/2.png)">
         <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
         <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-                <h1 class="mb-5 text-4xl font-bold lg:text-left">Teenager Program</h1>
-                <p class="mb-5 lg:text-left">
-                  Calling all teenage hockey enthusiasts! Elevate your game with our exclusive 
-                  Teen Hockey Program at Hockey Club.</p>
-                <button class="btn lg:-ml-[330px] bg-[#a12e2d] text-white border-0">Register Now</button>
-            </div>
+          <div class="max-w-md">
+            <h1 class="mb-5 text-4xl font-bold lg:text-left">Teenager Program</h1>
+            <p class="mb-5 lg:text-left">
+              Calling all teenage hockey enthusiasts! Elevate your game with our exclusive
+              Teen Hockey Program at Hockey Club.</p>
+            <button class="btn lg:-ml-[330px] bg-[#a12e2d] text-white border-0">Register Now</button>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<div class="hero w-full h-[450px] mt-10 rounded-2xl" style="background-image: url(./Images/3.png)">
-  <div class="hero-overlay rounded-2xl bg-opacity-60 "></div>
-  <div class="">
-      <div class="hero-content text-neutral-content text-center ">
+    <div class="hero w-full h-[450px] mt-10 rounded-2xl" style="background-image: url(./Images/3.png)">
+      <div class="hero-overlay rounded-2xl bg-opacity-60 "></div>
+      <div class="">
+        <div class="hero-content text-neutral-content text-center ">
           <div class="max-w-md lg:absolute lg:left-[15%] lg:mt-[100px]">
-              <h1 class="mb-5 text-4xl font-bold lg:text-left">Professional Program</h1>
-              <p class="mb-5 lg:text-left">
-                Elevate your hockey game to the professional level with Hockey Club
-                exclusive Professional Development Program.</p>
-              <button class="btn lg:-ml-[330px] bg-[#c93b38] text-white border-0">Register Now</button>
+            <h1 class="mb-5 text-4xl font-bold lg:text-left">Professional Program</h1>
+            <p class="mb-5 lg:text-left">
+              Elevate your hockey game to the professional level with Hockey Club
+              exclusive Professional Development Program.</p>
+            <button class="btn lg:-ml-[330px] bg-[#c93b38] text-white border-0">Register Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Products section-->
+
+    <div class="border-dotted border-t  border-black w-full mt-[80px] lg:mt-[100px] my-4"></div>
+    <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
+      <h1 class="text-[28px] lg:text-[36px] text-[#060607]">Our New Products</h1>
+      <p class="text-[16px] font-[500] text-[#00000099]">
+        Within our product lineup, the spotlight is on sports, presenting a varied selection of top-notch equipment,
+        clothing, and
+        accessories.Enhance your performance using our cutting-edge products crafted for both enthusiasts and athletes.
+      </p>
+    </div>
+    <div class="border-dashed border-t  border-black w-full my-16"></div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-[24px]">
+      <!--card.1-->
+      <div class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+          <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+              <img src="./Images/5.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover"
+                  alt="jacket" />
+          </figure>
+          <div class="mt-7 lg:ml-6 space-y-3">
+              <div class="flex w-[60%] justify-between">
+                  <h6 class="text-gray-500">
+                      <i class="fa-solid fa-star text-orange-600"></i>4.80</h6>
+                  <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>30</h6>
+                  <h6 class="text-gray-500">
+                      <i class="fa-regular fa-heart"></i>250</h6>
+              </div>
+              <h2 class="card-title">Jacket</h2>
+              <p>Dress youself as like a atlhete</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between">
+                  <h3 class="text-orange-700 font-[600]">Price - $200.00</h3>
+                  <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+              </div>
+          </div>
+      </div>
+      <div
+      class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+      <figure class="w-full lg:w-[180px]  px-[80px] lg:p-0">
+          <img src="./Images/6.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="flag" />
+      </figure>
+      <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+              <h6 class="text-gray-500">
+                  <i class="fa-solid fa-star text-orange-600"></i> 4.90
+              </h6>
+              <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>22</h6>
+              <h6 class="text-gray-500">
+                  <i class="fa-regular fa-heart"></i>100</h6>
+          </div>
+          <h2 class="card-title">World Cup Flags Football</h2>
+          <p>Collects the flag to support your favourite country</p>
+          <div class="card-actions flex flex-col justify-between  lg:flex-row">
+              <h3 class="text-orange-700 font-[600]">Price - $320.00</h3>
+              <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
           </div>
       </div>
   </div>
+
+  <div
+                class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+                <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+                    <img src="./Images/7.png" class="w-full h-[170px] bg-auto rounded-xl lg:object-cover" alt="cap" />
+                </figure>
+                <div class="mt-7 lg:ml-6 space-y-3">
+                    <div class="flex w-[60%] justify-between">
+                        <h6 class="text-gray-500">
+                            <i class="fa-solid fa-star text-orange-600"></i> 5.00
+                        </h6>
+                        <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i> 20</h6>
+                        <h6 class="text-gray-500">
+                            <i class="fa-regular fa-heart"></i> 200
+                        </h6>
+                    </div>
+                    <h2 class="card-title">World Cup Flags Football</h2>
+                    <p>Flags wave, football unites: World Cup passion unfolds.</p>
+                    <div class="card-actions justify-between flex flex-col lg:flex-row">
+                        <h3 class="text-orange-600 font-[600]">Price - $220.00</h3>
+                        <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div
+            class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+            <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+                <img src="./Images/8.png" class="h-[170px] w-full bg-auto rounded-xl  lg:object-cover" alt="jersey"/>
+            </figure>
+            <div class="mt-7 lg:ml-6 space-y-3">
+                <div class="flex w-[60%] justify-between">
+                    <h6 class="text-gray-500">
+                        <i class="fa-solid fa-star text-orange-600"></i>5.00</h6>
+                    <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>90</h6>
+                    <h6 class="text-gray-500">
+                        <i class="fa-regular fa-heart"></i>200
+                    </h6>
+                </div>
+                <h2 class="card-title">Jersey</h2>
+                <p>Jersey to color your team with your dream</p>
+                <div class="card-actions justify-between flex flex-col lg:flex-row">
+                    <h3 class="text-orange-700 font-[600]">Price - $250.00</h3>
+                    <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+                </div>
+            </div>
+        </div>
+
+        <div
+        class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+            <img src="./Images/9.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="helmet"/>
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+            <div class="flex w-[60%] justify-between">
+                <h6 class="text-gray-600">
+                    <i class="fa-solid fa-star text-orange-700"></i>5.00
+                </h6>
+                <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>40</h6>
+                <h6 class="text-gray-500">
+                    <i class="fa-regular fa-heart"></i>300
+                </h6>
+            </div>
+            <h2 class="card-title">Helmet</h2>
+            <p>Save your head with our qualityful helmet.</p>
+            <div class="card-actions justify-between flex flex-col lg:flex-row">
+                <h3 class="text-orange-700 font-[600]">Price - $220.00</h3>
+                <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+            </div>
+        </div>
+    </div>
+
+    <div
+    class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+    <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+        <img src="./Images/10.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover"
+            alt="Movie"/>
+    </figure>
+    <div class="mt-7 lg:ml-6 space-y-3">
+        <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-500">
+                <i class="fa-solid fa-star text-orange-700">
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>80</h6>
+            <h6 class="text-gray-500"><i class="fa-regular fa-heart"></i>210</h6>
+        </div>
+        <h2 class="card-title">Football</h2>
+        <p>Play with our export quality football .</p>
+        <div class="card-actions justify-between flex flex-col lg:flex-row">
+            <h3 class="text-orange-700 font-[600]">Price - $320.00</h3>
+            <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+        </div>
+    </div>
+</div>
 </div>
 
- <!--Products section-->
-
- <div class="border-dotted border-t  border-black w-full mt-[80px] lg:mt-[100px] my-4"></div>
- <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
-     <h1 class="text-[28px] lg:text-[36px] text-[#060607]">Our New Products</h1>
-     <p class="text-[16px] font-[500] text-[#00000099]">
-Within our product lineup, the spotlight is on sports, presenting a varied selection of top-notch equipment, clothing, and 
-accessories.Enhance your performance using our cutting-edge products crafted for both enthusiasts and athletes.</p>
- </div>
- <div class="border-dashed border-t  border-black w-full my-16"></div>
   </main>
 </body>
 
