--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/026ab584e8.js" crossorigin="anonymous"></script>
   <title>Hockey Club</title>
 </head>
 
@@ -358,7 +359,7 @@
     class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
     <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
         <img src="./Images/10.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover"
-            alt="Movie"/>
+            alt="helmet"/>
     </figure>
     <div class="mt-7 lg:ml-6 space-y-3">
         <div class="flex w-[60%] justify-between">
@@ -376,8 +377,45 @@
     </div>
 </div>
 </div>
-
   </main>
-</body>
 
+   <footer class="class= footer min-h-[200px] p-10 bg-black text-white text-base-content">
+        <aside class="text-center space-y-3 lg:text-left">
+            <h1 class="text-[29px] mx-auto font-[700] lg:mx-0">Get In Touch</h3>
+          <p class="text-gray-200">Fall Season Wednesday and Thursday evenings<br>at The Fessenden RinkProviding<br>reliable tech since 1992</p>
+          <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
+            <i class="fa-regular fa-envelope text-red-600"></i> hockeys@support.com
+          </h3>
+          <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
+            <i class="fa-solid fa-phone text-red-600"></i> (+62)123-321-543</h3>
+        </aside> 
+        <div class="mx-auto flex flex-row justify-between space-x-12 lg:space-x-40 lg:mx-0">
+        <nav class="flex flex-col space-y-2">
+          <header class="footer-title text-white-700">Company</header> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Leadership</a>
+          <a class="link link-hover">Careers</a>
+          <a class="link link-hover">News & Article</a>
+          <a class="link link-hover">Legal Notice</a>
+        </nav> 
+        <nav class="flex flex-col space-y-2">
+          <header class="footer-title text-white-700">Support</header> 
+          <a class="link link-hover">Help Center</a>
+          <a class="link link-hover">FAQ</a>
+          <a class="link link-hover">Ticket Support</a>
+          <a class="link link-hover">Contact Us</a>
+        </nav> 
+        </div>
+
+        <div class="w-full lg:w-[50%]">
+        <nav class="w-full flex flex-col text-center space-y-2 lg:w-[50%]">
+          <header class="footer-title text-white-700">Academy</header> 
+          <a class="link link-hover">Group Lesson</a>
+          <a class="link link-hover">Private Lesson</a>
+          <a class="link link-hover">Hockeys for kids</a>
+          <a class="link link-hover">Hockeys for Adult</a>
+        </nav>
+        </div>
+      </footer>
+</body>
 </html>
