added clients question

--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
         Gain a competitive edge with in-depth knowledge shared by our seasoned coaching team.</p>
     </div>
 
-    <div class="border-t border-dashed border-black w-full my-15"></div>
     <div class="flex flex-col lg:flex-row justify-between">
       <div class="hero h-full w-[100%] lg:h-[335px] lg:w-[570px] rounded-2xl"
         style="background-image: url(./Images/4.png)">
@@ -236,186 +235,213 @@
         accessories.Enhance your performance using our cutting-edge products crafted for both enthusiasts and athletes.
       </p>
     </div>
-    <div class="border-dashed border-t  border-black w-full my-16"></div>
-
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-[24px]">
-      <!--card.1-->
-      <div class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
-          <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
-              <img src="./Images/5.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover"
-                  alt="jacket" />
-          </figure>
-          <div class="mt-7 lg:ml-6 space-y-3">
-              <div class="flex w-[60%] justify-between">
-                  <h6 class="text-gray-500">
-                      <i class="fa-solid fa-star text-orange-600"></i>4.80</h6>
-                  <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>30</h6>
-                  <h6 class="text-gray-500">
-                      <i class="fa-regular fa-heart"></i>250</h6>
-              </div>
-              <h2 class="card-title">Jacket</h2>
-              <p>Dress youself as like a atlhete</p>
-              <div class="card-actions flex flex-col lg:flex-row justify-between">
-                  <h3 class="text-orange-700 font-[600]">Price - $200.00</h3>
-                  <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
-              </div>
-          </div>
-      </div>
+
+      <!--card-->
       <div
-      class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
-      <figure class="w-full lg:w-[180px]  px-[80px] lg:p-0">
-          <img src="./Images/6.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="flag" />
-      </figure>
-      <div class="mt-7 lg:ml-6 space-y-3">
-          <div class="flex w-[60%] justify-between">
-              <h6 class="text-gray-500">
-                  <i class="fa-solid fa-star text-orange-600"></i> 4.90
-              </h6>
-              <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>22</h6>
-              <h6 class="text-gray-500">
-                  <i class="fa-regular fa-heart"></i>100</h6>
-          </div>
-          <h2 class="card-title">World Cup Flags Football</h2>
-          <p>Collects the flag to support your favourite country</p>
-          <div class="card-actions flex flex-col justify-between  lg:flex-row">
-              <h3 class="text-orange-700 font-[600]">Price - $320.00</h3>
-              <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
-          </div>
-      </div>
-  </div>
-
-  <div
-                class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
-                <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
-                    <img src="./Images/7.png" class="w-full h-[170px] bg-auto rounded-xl lg:object-cover" alt="cap" />
-                </figure>
-                <div class="mt-7 lg:ml-6 space-y-3">
-                    <div class="flex w-[60%] justify-between">
-                        <h6 class="text-gray-500">
-                            <i class="fa-solid fa-star text-orange-600"></i> 5.00
-                        </h6>
-                        <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i> 20</h6>
-                        <h6 class="text-gray-500">
-                            <i class="fa-regular fa-heart"></i> 200
-                        </h6>
-                    </div>
-                    <h2 class="card-title">World Cup Flags Football</h2>
-                    <p>Flags wave, football unites: World Cup passion unfolds.</p>
-                    <div class="card-actions justify-between flex flex-col lg:flex-row">
-                        <h3 class="text-orange-600 font-[600]">Price - $220.00</h3>
-                        <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div
-            class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
-            <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
-                <img src="./Images/8.png" class="h-[170px] w-full bg-auto rounded-xl  lg:object-cover" alt="jersey"/>
-            </figure>
-            <div class="mt-7 lg:ml-6 space-y-3">
-                <div class="flex w-[60%] justify-between">
-                    <h6 class="text-gray-500">
-                        <i class="fa-solid fa-star text-orange-600"></i>5.00</h6>
-                    <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>90</h6>
-                    <h6 class="text-gray-500">
-                        <i class="fa-regular fa-heart"></i>200
-                    </h6>
-                </div>
-                <h2 class="card-title">Jersey</h2>
-                <p>Jersey to color your team with your dream</p>
-                <div class="card-actions justify-between flex flex-col lg:flex-row">
-                    <h3 class="text-orange-700 font-[600]">Price - $250.00</h3>
-                    <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
-                </div>
-            </div>
-        </div>
-
-        <div
-        class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
         <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
-            <img src="./Images/9.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="helmet"/>
+          <img src="./Images/5.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover" alt="jacket" />
         </figure>
         <div class="mt-7 lg:ml-6 space-y-3">
-            <div class="flex w-[60%] justify-between">
-                <h6 class="text-gray-600">
-                    <i class="fa-solid fa-star text-orange-700"></i>5.00
-                </h6>
-                <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>40</h6>
-                <h6 class="text-gray-500">
-                    <i class="fa-regular fa-heart"></i>300
-                </h6>
-            </div>
-            <h2 class="card-title">Helmet</h2>
-            <p>Save your head with our qualityful helmet.</p>
-            <div class="card-actions justify-between flex flex-col lg:flex-row">
-                <h3 class="text-orange-700 font-[600]">Price - $220.00</h3>
-                <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
-            </div>
-        </div>
-    </div>
-
-    <div
-    class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
-    <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
-        <img src="./Images/10.png" class="h-[170px] w-full bg-auto rounded-xl lg:object-cover"
-            alt="helmet"/>
-    </figure>
-    <div class="mt-7 lg:ml-6 space-y-3">
-        <div class="flex w-[60%] justify-between">
+          <div class="flex w-[60%] justify-between">
             <h6 class="text-gray-500">
-                <i class="fa-solid fa-star text-orange-700">
-            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>80</h6>
-            <h6 class="text-gray-500"><i class="fa-regular fa-heart"></i>210</h6>
+              <i class="fa-solid fa-star text-orange-600"></i>4.80
+            </h6>
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>30</h6>
+            <h6 class="text-gray-500">
+              <i class="fa-regular fa-heart"></i>250
+            </h6>
+          </div>
+          <h2 class="card">Jacket</h2>
+          <p>Dress youself as like a atlhete</p>
+          <div class="card-actions flex flex-col lg:flex-row justify-between">
+            <h3 class="text-orange-700 font-[600]">Price - $200.00</h3>
+            <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+          </div>
         </div>
-        <h2 class="card-title">Football</h2>
-        <p>Play with our export quality football .</p>
-        <div class="card-actions justify-between flex flex-col lg:flex-row">
+      </div>
+      <div
+        class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full lg:w-[180px]  px-[80px] lg:p-0">
+          <img src="./Images/6.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="flag" />
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-500">
+              <i class="fa-solid fa-star text-orange-600"></i> 4.90
+            </h6>
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>22</h6>
+            <h6 class="text-gray-500">
+              <i class="fa-regular fa-heart"></i>100
+            </h6>
+          </div>
+          <h2 class="card">World Cup Flags Football</h2>
+          <p>Collects the flag to support your favourite country</p>
+          <div class="card-actions flex flex-col justify-between  lg:flex-row">
             <h3 class="text-orange-700 font-[600]">Price - $320.00</h3>
             <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+          </div>
         </div>
+      </div>
+
+      <div
+        class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+          <img src="./Images/7.png" class="w-full h-[170px] bg-auto rounded-xl lg:object-cover" alt="cap" />
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-500">
+              <i class="fa-solid fa-star text-orange-600"></i> 5.00
+            </h6>
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i> 20</h6>
+            <h6 class="text-gray-500">
+              <i class="fa-regular fa-heart"></i> 200
+            </h6>
+          </div>
+          <h2 class="card">World Cup Flags Football</h2>
+          <p>Flags wave, football unites: World Cup passion unfolds.</p>
+          <div class="card-actions justify-between flex flex-col lg:flex-row">
+            <h3 class="text-orange-600 font-[600]">Price - $220.00</h3>
+            <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+          <img src="./Images/8.png" class="h-[170px] w-full bg-auto rounded-xl  lg:object-cover" alt="jersey" />
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-500">
+              <i class="fa-solid fa-star text-orange-600"></i>5.00
+            </h6>
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>90</h6>
+            <h6 class="text-gray-500">
+              <i class="fa-regular fa-heart"></i>200
+            </h6>
+          </div>
+          <h2 class="card">Jersey</h2>
+          <p>Jersey to color your team with your dream</p>
+          <div class="card-actions justify-between flex flex-col lg:flex-row">
+            <h3 class="text-orange-700 font-[600]">Price - $250.00</h3>
+            <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="card card-side h-full bg-base-100 flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+          <img src="./Images/9.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="helmet" />
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-600">
+              <i class="fa-solid fa-star text-orange-700"></i>5.00
+            </h6>
+            <h6 class="text-gray-500"><i class="fa-solid fa-eye"></i>40</h6>
+            <h6 class="text-gray-500">
+              <i class="fa-regular fa-heart"></i>300
+            </h6>
+          </div>
+          <h2 class="card">Helmet</h2>
+          <p>Save your head with our qualityful helmet.</p>
+          <div class="card-actions justify-between flex flex-col lg:flex-row">
+            <h3 class="text-orange-700 font-[600]">Price - $220.00</h3>
+            <h3><i class="fa-solid fa-truck"></i> Delivery Fee : Free</h3>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="card card-side bg-base-100 h-full flex flex-col lg:flex-row shadow-xl border-zinc-200 border-[1px] p-4">
+        <figure class="w-full px-[80px] lg:p-0 lg:w-[180px]">
+          <img src="./Images/10.png" class="h-[170px] w-full rounded-xl bg-auto lg:object-cover" alt="world" />
+        </figure>
+        <div class="mt-7 lg:ml-6 space-y-3">
+          <div class="flex w-[60%] justify-between">
+            <h6 class="text-gray-600">
+              <i class="fa-solid fa-star text-orange-700"></i>5.00
+            </h6>
+            <h6 class="text-gray-600"><i class="fa-solid fa-eye"></i>20</h6>
+            <h6 class="text-gray-600">
+              <i class="fa-regular fa-heart"></i>300
+            </h6>
+          </div>
+          <h2 class="card">World Cup Flag Football</h2>
+          <p>Flags flutter as football brings people together: The fervor of the World Cup unfolds.</p>
+          <div class="card-actions justify-between flex flex-col lg:flex-row">
+            <h3 class="text-orange-700">Price - $420.00</h3>
+            <h3><i class="fa-solid fa-truck"></i>Delivery Fee : Free</h3>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-</div>
+
+
+    <!--Clients question-->
+
+
+    <div class="w-full border-t border-dashed border-black  mt-[60px] lg:mt-[100px] my-4"></div>
+    <div class="w-100% lg:w-[607px] text-center mx-auto mt-5 lg:mt-[50px] space-y-5">
+      <h1 class="text-[30px] lg:text-[35px] font-[800] text-black">Clients Question</h1>
+      <p class="text-[15px] font-[500] text-black">
+        We highly appreciate and value the inquiries from our clients. Our committed team is dedicated to 
+        offering thoughtful responses, aiming to cultivate trust and guarantee satisfaction. 
+        Emphasizing transparent communication, 
+        we strive to address concerns effectively, fostering enduring relationships with our clients.
+      </p>
+    </div>
+
+    
   </main>
 
-   <footer class="class= footer min-h-[200px] p-10 bg-black text-white text-base-content">
-        <aside class="text-center space-y-3 lg:text-left">
-            <h1 class="text-[29px] mx-auto font-[700] lg:mx-0">Get In Touch</h3>
-          <p class="text-gray-200">Fall Season Wednesday and Thursday evenings<br>at The Fessenden RinkProviding<br>reliable tech since 1992</p>
-          <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
-            <i class="fa-regular fa-envelope text-red-600"></i> hockeys@support.com
-          </h3>
-          <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
-            <i class="fa-solid fa-phone text-red-600"></i> (+62)123-321-543</h3>
-        </aside> 
-        <div class="mx-auto flex flex-row justify-between space-x-12 lg:space-x-40 lg:mx-0">
-        <nav class="flex flex-col space-y-2">
-          <header class="footer-title text-white-700">Company</header> 
-          <a class="link link-hover">About us</a>
-          <a class="link link-hover">Leadership</a>
-          <a class="link link-hover">Careers</a>
-          <a class="link link-hover">News & Article</a>
-          <a class="link link-hover">Legal Notice</a>
-        </nav> 
-        <nav class="flex flex-col space-y-2">
-          <header class="footer-title text-white-700">Support</header> 
-          <a class="link link-hover">Help Center</a>
-          <a class="link link-hover">FAQ</a>
-          <a class="link link-hover">Ticket Support</a>
-          <a class="link link-hover">Contact Us</a>
-        </nav> 
-        </div>
 
-        <div class="w-full lg:w-[50%]">
-        <nav class="w-full flex flex-col text-center space-y-2 lg:w-[50%]">
-          <header class="footer-title text-white-700">Academy</header> 
-          <a class="link link-hover">Group Lesson</a>
-          <a class="link link-hover">Private Lesson</a>
-          <a class="link link-hover">Hockeys for kids</a>
-          <a class="link link-hover">Hockeys for Adult</a>
-        </nav>
-        </div>
-      </footer>
+<!--Footer section-->
+  <footer class="class= footer min-h-[200px] p-10 bg-black text-white text-base-content">
+    <aside class="text-center space-y-3 lg:text-left">
+      <h1 class="text-[29px] mx-auto font-[700] lg:mx-0">Get In Touch</h3>
+        <p class="text-gray-200">Fall Season Wednesday and Thursday evenings<br>at The Fessenden
+          RinkProviding<br>reliable tech since 1992</p>
+        <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
+          <i class="fa-regular fa-envelope text-red-600"></i> hockeys@support.com
+        </h3>
+        <h3 class="text-[20px] text-gray-200 mx-auto lg:mx-0">
+          <i class="fa-solid fa-phone text-red-600"></i> (+62)123-321-543
+        </h3>
+    </aside>
+    <div class="mx-auto flex flex-row justify-between space-x-12 lg:space-x-40 lg:mx-0">
+      <nav class="flex flex-col space-y-2">
+        <header class="footer-title text-white-700">Company</header>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Leadership</a>
+        <a class="link link-hover">Careers</a>
+        <a class="link link-hover">News & Article</a>
+        <a class="link link-hover">Legal Notice</a>
+      </nav>
+      <nav class="flex flex-col space-y-2">
+        <header class="footer-title text-white-700">Support</header>
+        <a class="link link-hover">Help Center</a>
+        <a class="link link-hover">FAQ</a>
+        <a class="link link-hover">Ticket Support</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+    </div>
+
+    <div class="w-full lg:w-[50%]">
+      <nav class="w-full flex flex-col text-center space-y-2 lg:w-[50%]">
+        <header class="footer-title text-white-700">Academy</header>
+        <a class="link link-hover">Group Lesson</a>
+        <a class="link link-hover">Private Lesson</a>
+        <a class="link link-hover">Hockeys for kids</a>
+        <a class="link link-hover">Hockeys for Adult</a>
+      </nav>
+    </div>
+  </footer>
 </body>
+
 </html>
